--- a/src/main/resources/static/css/Body_weight.css
+++ b/src/main/resources/static/css/Body_weight.css
@@ -12,12 +12,10 @@ body {
     background: #05070a;
     color: #f5f5f5;
     min-height: 100vh;
-    padding: 20px;
 }
 
 /* HEADERS */
 h1 {
-    color: #e0f7ff;
     margin-bottom: 12px;
 }
 
@@ -67,4 +65,9 @@ canvas {
     body {
         padding: 12px;
     }
+}
+
+.tacker-input {
+    margin-top: 10px;
+    margin-bottom: 18px;
 }
